<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.littlebees.andar.littlebees.EvaluasiSholatActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/evaluasi_sholat">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

>            <android.support.design.widget.TabItem
                android:id="@+id/tabMagrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_magrib"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tabIsya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_isya" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabSubuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_subuh" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabZuhur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_zuhur" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabAshar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_ashar" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabsholat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_light"
        fab:fab_colorRipple="@color/accent" />
</android.support.design.widget.CoordinatorLayout>
